<resources>
    <string name="app_name">HotelSys</string>

    <string name="favorito">Botón de favorito</string>

    <!-- PABLO FLORES / RESERVAR -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fechaEntrada">Fecha de entrada</string>
    <string name="fechaSalida">Fecha de salida</string>
    <string name="reservaHabitacion">Reserva de Habitación</string>
    <string name="numeroHuespedes">Número de Huespedes</string>
    <string name="agregarProducto">¿Desea agregar un producto?</string>
    <string name="infoUsuario">Información de Usuario</string>
    <string name="nombreCompleto">Nombre Completo</string>
    <string name="correo">Correo electronico</string>
    <string name="telefono">Telefono</string>
    <string name="resumenReserva">Resumen de la reserva</string>
    <string name="cancelar">Cancelar</string>
    <string name="reservar">Reservar</string>
    <string name="numero_de_noches">Número de noches:</string>
    <string name="btn_agregar_producto">Agregar</string>
    <string name="aumentar_cantidad">Aumentar cantidad</string>
    <string name="eliminar_producto">Eliminar producto</string>
    <string name="disminuir_cantidad">Disminuir cantidad</string>
    <string name="continuar">Continuar</string>
    <string name="impuestos_y_tasas_s_0_00">Impuestos y tasas: S/. 0.00</string>
    <string name="monto_s_0_00">Monto: S/. 0.00</string>
    <string name="imagen_de_la_habitaci_n">Imagen de la habitación</string>
</resources>