<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_producto_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            tools:text="Coca-Cola 500ml" />

        <TextView
            android:id="@+id/tv_producto_precio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:textColor="#666"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            tools:text="S/ 5.00" />

        <TextView
            android:id="@+id/tv_producto_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="1"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_cantidad_disminuir"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/disminuir_cantidad"
            android:src="@drawable/ic_minus" />

        <ImageButton
            android:id="@+id/btn_cantidad_aumentar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/aumentar_cantidad"
            android:src="@drawable/ic_plus" />

        <TextView
            android:id="@+id/tv_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:background="@drawable/textview_border"
            android:width="32dp"
            android:gravity="center"
            tools:text="1"
            android:padding="8dp"
            />

        <ImageButton
            android:id="@+id/btn_cantidad_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:contentDescription="@string/eliminar_producto"
            android:src="@drawable/delete_1_svgrepo_com" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>